// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feed component renders correctly while loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#323232",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
</View>
`;

exports[`Feed component renders correctly while loading with events 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#323232",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#696A6B",
            "borderBottomWidth": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingHorizontal": 12,
              "paddingTop": 12,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "paddingLeft": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#7ED321",
                  "fontSize": 14,
                  "marginBottom": -2,
                }
              }
            >
              Carlos Pinto
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DEDEDE",
                  "fontSize": 10,
                }
              }
            >
              @
              cpinto7
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "bottom": 0,
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "left": 10,
                  "position": "absolute",
                }
              }
            >
              Invalid date
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={false}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 30,
                },
                Object {
                  "position": "absolute",
                  "right": 9,
                  "top": 9,
                },
                Object {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#696A6B",
            "borderBottomWidth": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingHorizontal": 12,
              "paddingTop": 12,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "paddingLeft": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#7ED321",
                  "fontSize": 14,
                  "marginBottom": -2,
                }
              }
            >
              Carlos Pinto
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DEDEDE",
                  "fontSize": 10,
                }
              }
            >
              @
              cpinto7
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "bottom": 0,
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "left": 10,
                  "position": "absolute",
                }
              }
            >
              Invalid date
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={false}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 30,
                },
                Object {
                  "position": "absolute",
                  "right": 9,
                  "top": 9,
                },
                Object {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Feed component renders correctly with events 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#323232",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#696A6B",
            "borderBottomWidth": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingHorizontal": 12,
              "paddingTop": 12,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "paddingLeft": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#7ED321",
                  "fontSize": 14,
                  "marginBottom": -2,
                }
              }
            >
              Carlos Pinto
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DEDEDE",
                  "fontSize": 10,
                }
              }
            >
              @
              cpinto7
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "bottom": 0,
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "left": 10,
                  "position": "absolute",
                }
              }
            >
              Invalid date
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={false}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 30,
                },
                Object {
                  "position": "absolute",
                  "right": 9,
                  "top": 9,
                },
                Object {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#696A6B",
            "borderBottomWidth": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingHorizontal": 12,
              "paddingTop": 12,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "paddingLeft": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#7ED321",
                  "fontSize": 14,
                  "marginBottom": -2,
                }
              }
            >
              Carlos Pinto
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DEDEDE",
                  "fontSize": 10,
                }
              }
            >
              @
              cpinto7
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "bottom": 0,
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "left": 10,
                  "position": "absolute",
                }
              }
            >
              Invalid date
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={false}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 30,
                },
                Object {
                  "position": "absolute",
                  "right": 9,
                  "top": 9,
                },
                Object {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Feed component renders correctly without events 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#323232",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
</View>
`;
